[gd_scene load_steps=3 format=2]

[ext_resource path="res://roundend/roundend.gd" type="Script" id=1]
[ext_resource path="res://mainmenu/headertext.tscn" type="PackedScene" id=7]

[node name="RoundEnd" type="Control"]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 544.0
script = ExtResource( 1 )

[node name="TimerLabel" type="Label" parent="."]
margin_left = 352.0
margin_top = 117.663
margin_right = 488.0
margin_bottom = 149.663
text = "Next round:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remaining" type="Label" parent="TimerLabel"]
margin_left = 136.0
margin_right = 168.0
margin_bottom = 32.0
text = "30"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" parent="." instance=ExtResource( 7 )]
margin_left = 96.0
margin_top = 21.6632
margin_right = 800.0
margin_bottom = 125.663
text = "ROUND END"

[node name="PickTimer" type="Timer" parent="."]

[node name="LoadTimer" type="Timer" parent="."]
